# CV3

./: .gitignore  CMakeLists.txt  PixelEffect.sln  README.txt  clean.bat
WindowsApp/: WindowsApp.vcxproj  main.cpp
