CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT(PixelEffect)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(OpenCV REQUIRED COMPONENTS core imgcodecs highgui stitching)

MESSAGE(STATUS "Building ${PROJECT_NAME} ...")

SET(PROJECT_MAJOR_VERSION 1)
SET(PROJECT_MINOR_VERSION 0)
SET(PROJECT_VERSION ${PROJECT_MAJOR_VERSION}.${PROJECT_MINOR_VERSION})

SET(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
SET(SOURCE_DIR WindowsApp)
SET(LIB_DIR ${CMAKE_SOURCE_DIR}/lib/x64/Debug)

link_directories(${LIB_DIR})

FILE(GLOB HEADERS_WINDOWS_LIB "${SOURCE_DIR}/PixelEffect.Windows/*.h")
FILE(GLOB HEADERS_WINDOWS_APP "WindowsApp/*.h")

FILE(MAKE_DIRECTORY includes)

INCLUDE_DIRECTORIES( 
	${INCLUDE_DIR} 
	${CMAKE_CURRENT_BINARY_DIR}/includes)

FILE(GLOB SOURCES "${SOURCE_DIR}/main.cpp")
FILE(MAKE_DIRECTORY sources)
FILE(COPY ${SOURCES} DESTINATION sources)
FILE(COPY ${SOURCES_WINDOWS_LIB} DESTINATION sources)

FILE(GLOB SOURCES_FILES	"${CMAKE_CURRENT_BINARY_DIR}/sources/*.cpp")

if (WIN32)
    add_definitions(-DWINDOWS)
endif()

if (UNIX)
    add_definitions(-DUNIX)
endif()

MESSAGE(STATUS "Compiling ..." )

ADD_EXECUTABLE(${PROJECT_NAME}App ${SOURCES_WINDOWS_APP})
set_target_properties(${PROJECT_NAME}App PROPERTIES ENABLE_EXPORTS ON)
target_link_libraries(${PROJECT_NAME}App
		${OPENCV_LIBS} )

MESSAGE(STATUS "COMPLETED !" )